--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,1 @@
-For summarized changelog, please see [releases](https://github.com/Pairman/Xdcheckin/releases).
+For summarized changelog, please see https://github.com/Pairman/Xdcheckin/releases .
